@@ -197,12 +197,18 @@ sub _groups
         scope => 'sub',
     };
 
+
+
     my $result = $self->_ldap->search($attrs);
 
     my $groups = [];
     if ($result->count > 0) {
         foreach my $entry ($result->sorted('cn')) {
-            push (@{$groups}, new EBox::Samba::Group(entry => $entry));
+            my $group =  new EBox::Samba::Group(entry => $entry);
+            next if ($group->isInternal() and not $params{internal});
+            next if ($group->isSystem() and not $params{system});
+
+            push (@{$groups}, $group);
         }
     }
     return $groups;
