@@ -1,4 +1,6 @@
 HEAD
+	+ The groups and groupsNotIn methods have now the same behaviour
+	  for all EBox::Samba::OrganizationalPerson classes
 	+ Catch error trying to add an already added or delete an already deleted
 	  user to group
 	+ Avoid warning flag on smart match experimental feature
